updated README.md file
