# routes/api.php
@@ -19,16 +19,6 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
-/*
-//  Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
-//     return $request->user();
-// });
-
-// Route::controller(AuthController::class)->group(function () {
-//     Route::post('login', 'login')->name('login');
-//     Route::post('register', 'register')->middleware(['auth.apikey', 'auth.role:admin,cachier'])->name('register');
-// });
-*/
 
 // All request require API key
 
@@ -39,25 +29,25 @@ Route::middleware(['auth.apikey'])->group(function () {
 
 // Protected Routes: Admin Cachier and Customer Only
 Route::middleware(['auth.apikey', 'auth.role:admin,cachier,customer'])->group(function () {
-    Route::post('logout', [AuthController::class, 'logout'])->name('logout');
-    Route::post('refresh', [AuthController::class, 'refresh'])->name('refresh-token');
+    Route::post('secure/cust/logout', [AuthController::class, 'logout'])->name('logout');
+    Route::post('secure/cust/refresh', [AuthController::class, 'refresh'])->name('refresh-token');
 
-    Route::post('account/create', [AccountController::class, 'create'])->name('create-account');
-    Route::get('account/balance/get', [AccountController::class, 'getMyBalance'])->name('get-my-balance');
-    Route::get('account/transfers', [TransactionController::class, 'getMyTransfers'])->name('get-my-transfers');
+    Route::post('secure/cust/account/create', [AccountController::class, 'create'])->name('create-account');
+    Route::get('secure/cust/account/balance/get', [AccountController::class, 'getMyBalance'])->name('get-my-balance');
+    Route::get('secure/cust/account/transfers', [TransactionController::class, 'getMyTransfers'])->name('get-my-transfers');
 
-    Route::post('transaction/initiate', [TransactionController::class, 'makeTransaction'])->name('make-transaction');
+    Route::post('secure/cust/transaction/initiate', [TransactionController::class, 'makeTransaction'])->name('make-transaction');
 });
 
 // Protected Routes: Admin and Cachier only
 Route::middleware(['auth.apikey', 'auth.role:admin,cachier'])->group(function () {
-    Route::post('register', [AuthController::class, 'register'])->name('register');
+    Route::post('secure/cachr/register', [AuthController::class, 'register'])->name('register');
 
-    Route::get('account/{id}/balance/get', [AccountController::class, 'retrieveBalance'])->name('get-account-balance');
-    Route::get('account/{id}/transfers', [TransactionController::class, 'getTransfers'])->name('get-transfers');
+    Route::get('secure/cachr/account/{id}/balance/get', [AccountController::class, 'retrieveBalance'])->name('get-account-balance');
+    Route::get('secure/cachr/account/{id}/transfers', [TransactionController::class, 'getTransfers'])->name('get-account-transfers');
 });
 
 // Protected Routes: Admin only
 Route::middleware(['auth.apikey', 'auth.role:admin'])->group(function () {
-    Route::patch('account/status-change', [AccountController::class, 'changeAccountStatus'])->name('change-account-status');
+    Route::patch('secure/admin/account/status-change', [AccountController::class, 'changeAccountStatus'])->name('change-account-status');
 });
